# django-app

./: .env.template  .gitignore  Dockerfile  devices.csv  docker-compose.yaml  purchases.csv  pyproject.toml  requirements.txt
Testing/mysite/myauth/: urls.py  views.py
Testing/mysite/shopapp/: views.py
mysite/: log.txt  log.txt.1  log.txt.2  log.txt.3  quieries.sql  requirements.txt  shopapp-fixtures.json  shopapp-products-fixtures.json  shopapp-products-fixtures.xml
mysite/BlogApp/: admin.py  models.py  sitemap.py  urls.py  views.py
mysite/BlogApp/migrations/: 0001_initial.py  0002_alter_article_content.py
mysite/myapiapp/: serializers.py  urls.py  views.py
mysite/myauth/: models.py  tests.py  urls.py  views.py
mysite/myauth/migrations/: 0001_initial.py  0002_profile_avatar.py
mysite/mysite/: settings.py  sitemaps.py  urls.py
mysite/pics/: mobile-phone-mockup-with-editable-design-changeable-colors_196070-196.avif
mysite/requestdataapp/: forms.py  middlewares.py  urls.py  views.py
mysite/shopapp/: admin.py  admin_mixins.py  common.py  forms.py  models.py  serializers.py  sitemap.py  tests.py  urls.py  views.py
mysite/shopapp/fixtures/: groups-fixture.json  order-fixture.json  products-fixture.json  users-fixture.json
mysite/shopapp/migrations/: 0001_initial.py  0002_product_creted_at_product_discount_product_price.py  0003_product_archived.py  0004_order.py  0005_order_user.py  0006_order_producs.py  0007_rename_producs_order_products.py  0008_alter_product_options.py  0009_product_created_by.py  0010_order_receipt.py  0011_product_preview.py  (+2 more)
(+43 files in other folders)
