[tool.poetry]
name = "python-django"
version = "0.1.0"
description = ""
authors = ["ivan"]

[tool.poetry.dependencies]
python = "^3.12"
django = "5.0.3"
django-rest-framework = "^0.1.0"
django-filter = "^24.3"
django-debug-toolbar = "^4.4.6"
pillow = "^10.4.0"
gunicorn = "^22.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
